# cs294-homework

assignmet2/: README.md  c_interface.c  c_interface.h  hello  hello.cpp  hello.py
rust-compiler/: .gitignore  CMakeLists.txt  Makefile
rust-compiler/docs/designs/: architecture.md  lexer.md  main.md  parser.md
rust-compiler/docs/developers/: act-on-plan.md  make-a-plan.md
rust-compiler/docs/dones/: DONE-cli-help-exclusivity.md  DONE-cmake-build.md  DONE-integration-tests.md  DONE-lexer-implementation.md  DONE-lexer-tests.md  DONE-parser.md
rust-compiler/docs/plans/: PLAN-cli-help-exclusivity.md  PLAN-cmake-build.md  PLAN-integration-tests.md  PLAN-lexer-implementation.md  PLAN-lexer-tests.md  PLAN-parser-extensions.md  PLAN-parser-semicolons.md  PLAN-parser-suggested-tests.md  PLAN-parser.md
rust-compiler/include/: ast.h  lexer.h  parser.h
rust-compiler/src/: ast.cpp  lexer.cpp  main.cpp  parser.cpp
rust-compiler/tests/: CMakeLists.txt
rust-compiler/tests/cli/: cli_tests.cpp
rust-compiler/tests/integration/: full_program.out  full_program.rs  integration_tests.cpp  parser_err.err  parser_err.out  parser_err.rs  parser_ok.out  parser_ok.rs  unknown.err  unknown.out  unknown.rs
rust-compiler/tests/lexer/: lexer_tests.cpp
rust-compiler/tests/parser/: parser_tests.cpp
